--- a/Flir.PowerSupplyServices/App.config
+++ b/Flir.PowerSupplyServices/App.config
@@ -1,34 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ClientSettingsProvider.ConnectionStringName" value="DefaultConnection" />
+  </appSettings>
+  <system.web>
+    <compilation debug="true" />
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientWindowsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" connectionStringName="DefaultConnection" credentialsProvider="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" connectionStringName="DefaultConnection" />
+      </providers>
+    </roleManager>
+  </system.web>
   <connectionStrings>
     <add name="FlirDbContext" connectionString="server=(localdb)\MSSQLLocalDB;database=Flir;trusted_connection=true" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
   </connectionStrings>
+  <!-- When deploying the service library project, the content of the config file must be added to the host's 
+  app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="Flir.CameraServices.CameraService">
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:2113" />
-          </baseAddresses>
-        </host>
-        <endpoint address="net.tcp://localhost:2114/CameraService" binding="netTcpBinding" contract="Flir.CameraServices.ICameraService" />
-      </service>
       <service name="Flir.PowerSupplyServices.PowerSupplyService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:2115" />
+            <add baseAddress="http://localhost:2110" />
           </baseAddresses>
         </host>
-        <endpoint address="net.tcp://localhost:2116/PowerSupplyService" binding="netTcpBinding" contract="Flir.PowerSupplyServices.IPowerSupplyService" />
-      </service> 
+        <!--external clients over http-->
+        <endpoint address="PowerSupplyService" binding="basicHttpBinding" contract="Flir.PowerSupplyServices.IPowerSupplyService" />
+        <!--over sockets for local clients, faster-->
+        <endpoint address="net.tcp://localhost:2111/PowerSupplyService" binding="netTcpBinding" contract="Flir.PowerSupplyServices.IPowerSupplyService" />
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
