--- a/Flir.PowerSupplyServices/Flir.PowerSupplyServices.csproj
+++ b/Flir.PowerSupplyServices/Flir.PowerSupplyServices.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CACCF55D-48D8-4BCF-B101-ED6FD8F35C1B}</ProjectGuid>
+    <ProjectGuid>{DA12436D-EE1C-40F0-A123-2B8E4421EC8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Flir.CameraServices</RootNamespace>
-    <AssemblyName>Flir.CameraServices</AssemblyName>
+    <RootNamespace>Flir.PowerSupplyServices</RootNamespace>
+    <AssemblyName>Flir.PowerSupplyServices</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -64,9 +64,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICameraService.cs" />
+    <Compile Include="IPowerSupplyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CameraService.cs" />
+    <Compile Include="PowerSupplyService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
