--- a/Flir.SelfHost/App.config
+++ b/Flir.SelfHost/App.config
@@ -19,7 +19,7 @@
             <add baseAddress="http://localhost:2113" />
           </baseAddresses>
         </host>
-        <endpoint address="net.tcp://localhost:2114/CameraService" binding="netTcpBinding" contract="Flir.CameraServices.ICameraService" />
+        <endpoint address="CameraService" binding="basicHttpBinding" contract="Flir.CameraServices.ICameraService" />
       </service>
       <service name="Flir.PowerSupplyServices.PowerSupplyService">
         <host>
@@ -27,7 +27,7 @@
             <add baseAddress="http://localhost:2115" />
           </baseAddresses>
         </host>
-        <endpoint address="net.tcp://localhost:2116/PowerSupplyService" binding="netTcpBinding" contract="Flir.PowerSupplyServices.IPowerSupplyService" />
+        <endpoint address="PowerSupplyService" binding="basicHttpBinding" contract="Flir.PowerSupplyServices.IPowerSupplyService" />
       </service> 
     </services>
     <behaviors>
