--- a/Flir.Services/App.config
+++ b/Flir.Services/App.config
@@ -40,32 +40,23 @@
           <userPrincipalName value="DESKTOP-B07DKIN\chimm" />
         </identity>
       </endpoint>
+      <endpoint address="http://localhost:2110/PowerSupplyService"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPowerSupplyService"
+        contract="PowerSupplyServiceReference.IPowerSupplyService" name="BasicHttpBinding_IPowerSupplyService" />
+      <endpoint address="net.tcp://localhost:2111/PowerSupplyService"
+        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IPowerSupplyService"
+        contract="PowerSupplyServiceReference.IPowerSupplyService" name="NetTcpBinding_IPowerSupplyService">
+        <identity>
+          <userPrincipalName value="DESKTOP-B07DKIN\chimm" />
+        </identity>
+      </endpoint>
     </client>
     <services>
-      <service name="Flir.FlirService">
-        <endpoint address="Flir" binding="basicHttpBinding" contract="Flir.IFlirService" />
-        <endpoint address="net.tcp://localhost:2112/Flir" binding="netTcpBinding" contract="Flir.IFlirService" />
+      <service name="Flir.Services.FlirService">
+        <endpoint address="net.tcp://localhost:2112/Flir" binding="netTcpBinding" contract="Flir.Services.IFlirService" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:2112" />
-          </baseAddresses>
-        </host>
-      </service>
-      <service name="Flir.CameraService">
-        <endpoint address="Flir" binding="basicHttpBinding" contract="Flir.ICameraService" />
-        <endpoint address="net.tcp://localhost:2113/CameraService" binding="netTcpBinding" contract="Flir.ICameraService" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:2113" />
-          </baseAddresses>
-        </host>
-      </service>
-      <service name="Flir.PowerSupplyService">
-        <endpoint address="Flir" binding="basicHttpBinding" contract="Flir.PowerSupplyService.IPowerSupplyService" />
-        <endpoint address="net.tcp://localhost:2114/PowerSupplyService" binding="netTcpBinding" contract="Flir.PowerSupplyService.IPowerSupplyService" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:2114" />
           </baseAddresses>
         </host>
       </service>
@@ -89,9 +80,11 @@
           <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647" />
         </binding>
         <binding name="BasicHttpBinding_ICameraService" />
+        <binding name="BasicHttpBinding_IPowerSupplyService" />
       </basicHttpBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_ICameraService" />
+        <binding name="NetTcpBinding_IPowerSupplyService" />
       </netTcpBinding>
       <netHttpBinding>
         <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
