--- a/Flir.Services/Flir.Services.csproj
+++ b/Flir.Services/Flir.Services.csproj
@@ -69,6 +69,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\PowerSupplyServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="IFlirService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FlirService.cs" />
@@ -87,24 +92,26 @@
     <None Include="Connected Services\CameraServiceReference\item2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\PowerSupplyServiceReference\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PowerSupplyServiceReference\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PowerSupplyServiceReference\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PowerSupplyServiceReference\PowerSupplyService.wsdl" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Flir.Entities.Camera.datasource" />
+    <None Include="Properties\DataSources\Flir.Entities.PowerSupply.datasource" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Flir.Data\Flir.Data.csproj">
-      <Project>{bb1e80de-e6d1-4e29-bc2d-db66b81163c5}</Project>
-      <Name>Flir.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Flir.Entities\Flir.Entities.csproj">
-      <Project>{7ec71c6e-e769-4c9e-8327-c72b0724b1b7}</Project>
-      <Name>Flir.Entities</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\CameraServiceReference\" />
+    <WCFMetadataStorage Include="Connected Services\PowerSupplyServiceReference\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\CameraServiceReference\item.disco" />
@@ -120,6 +127,31 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PowerSupplyServiceReference\item.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PowerSupplyServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PowerSupplyServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PowerSupplyServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Flir.Data\Flir.Data.csproj">
+      <Project>{bb1e80de-e6d1-4e29-bc2d-db66b81163c5}</Project>
+      <Name>Flir.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Flir.Entities\Flir.Entities.csproj">
+      <Project>{7ec71c6e-e769-4c9e-8327-c72b0724b1b7}</Project>
+      <Name>Flir.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
